# clashup

./: Cargo.toml  README.md
clash-config/: Cargo.toml
clash-config/src/: lib.rs  proxy_group.rs  proxy_provider.rs  rule_provider.rs
config/: openwrt-tun.yaml
src/: error.rs  main.rs
src/command/: client.rs  config.rs  daemon.rs  init.rs  mod.rs
src/utils/: download_clash.rs  mod.rs  start_clash.rs  update_config.rs
