[package]
name = "clashup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.18", features = ["derive"] }
reqwest = "0.11.11"
thiserror = "1.0.32"
tokio = { version = "1.20.1", features = ["full"] }
